<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_out"
    >
    <include
    android:id="@+id/tb_appbar"
    layout="@layout/toolbar"
    />
    <RelativeLayout
        android:layout_below="@+id/tb_appbar"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp"
        android:gravity="center_vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tv_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rb_difficulty"
            android:text="difficulty"/>
        <RatingBar
            android:id="@+id/rb_difficulty"
            android:layout_toRightOf="@+id/tv_difficulty"
            android:layout_width="wrap_content"
            android:isIndicator="false"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_alignRight="@+id/tv_difficulty"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="exam"
            android:id="@+id/textView2"
            android:layout_below="@+id/rb_difficulty"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <RatingBar
            android:layout_alignLeft="@+id/rb_difficulty"
            android:id="@+id/rb_exam"
            android:isIndicator="false"
            android:layout_below="@+id/rb_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignRight="@+id/tv_difficulty"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:id="@+id/tv_teacher"
            android:layout_below="@+id/rb_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="teacher"/>
        <RatingBar
            android:layout_alignLeft="@+id/rb_difficulty"
            android:id="@+id/rb_teacher"
            android:isIndicator="false"
            android:layout_below="@+id/rb_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignRight="@+id/tv_difficulty"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:id="@+id/tv_usability"
            android:layout_below="@+id/rb_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="usability"/>
        <RatingBar
            android:layout_toRightOf="@+id/tv_usability"
            android:layout_alignLeft="@+id/rb_difficulty"
            android:id="@+id/rb_usability"
            android:isIndicator="false"
            android:layout_below="@+id/rb_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your comment here."
        android:id="@+id/et_comment"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>