<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team.courseselector.AddEvaluationActivity">
    <item android:id="@+id/menu_submit" android:title="submit"
        android:icon="@drawable/ic_submit"
     app:showAsAction="always" />
</menu>
