<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".CourseAdd">

    <include
        android:id="@+id/tb_appbar"
        layout="@layout/toolbar"
        />
    <RelativeLayout
        android:layout_below="@+id/tb_appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
    <TextView android:text="@string/coursenumber" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:id="@+id/textView1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/editText"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:layout_marginLeft="10dp"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Difficulty"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teacher"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exam"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usability"
        android:id="@+id/textView6"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/seekBar4"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <SeekBar
        android:layout_width="match_parent"
        android:max="10"
        android:layout_alignLeft="@+id/editText"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:layout_alignTop="@+id/textView3"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:id="@+id/seekBar3"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:layout_alignLeft="@id/editText"
        android:id="@+id/seekBar4"
        android:layout_alignTop="@+id/textView5"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_alignLeft="@+id/editText"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar5"
        android:max="10"
        android:layout_alignTop="@id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
