<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team.courseselectorlocalcalculator.MainActivity">

    <item android:id="@+id/menu_add" android:title="add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"></item>
    <item android:id="@+id/menu_next" android:title="next"
        android:icon="@drawable/ic_next"
        app:showAsAction="always"></item>
</menu>
